# Pakalorie_FYP

./: .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  app.json  firestore.rules  metro.config.js  package-lock.json  package.json  tailwind.config.js
.agents/: CODEX.md
.claude/: CLAUDE.md  settings.local.json
.handoff/: DECISIONS.md  STATE.md  TO_CLAUDE.md  TO_CODEX.md
.planning/: PROJECT.md  REQUIREMENTS.md  (+2 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: calories.py  depth.py  foods.py  recognition.py
backend/app/core/: constants.py  responses.py  settings.py
backend/app/db/: models.py  session.py
backend/app/schemas/: calorie.py  common.py  depth.py  food.py  recognition.py
backend/app/services/: calorie_engine.py  depth.py  food_service.py  gemini.py  recognition.py  retrieval.py  yolo_recognition.py
backend/data/: desi_seed.json  usda_foundation_sample.json
backend/docs/: API_CONTRACT.md  CALORIE_EVAL.md  DATA_NOTES.md  DEPLOY.md  DEPTH_NOTES.md  LOCAL_DB_SMOKE.md
backend/migrations/: env.py
backend/migrations/versions/: 20260603_0001_baseline.py
backend/scripts/: build_usda_extract.py  download_midas.py  eval_calories.py  seed_foods.py
backend/tests/: test_calorie_engine.py  test_depth.py  test_food_service.py  test_health.py  test_integration.py  test_openapi.py  test_seed_data.py  test_yolo_recognition.py
(+116 files in other folders)
