[project]
name = "pakalorie-backend"
version = "0.1.0"
description = "FastAPI backend for Pakalorie FYP food recognition and grounded calorie calculation."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "google-generativeai>=0.8.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "onnxruntime>=1.20.0",
  "pgvector>=0.3.0",
  "pillow>=10.4.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: requires a live database (open the SSH tunnel / set DATABASE_URL); skipped otherwise",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
